# JobSeekerAI

./: JobSeekerAI_ReadMe.docx  Leetcode.code-workspace  README.md  System Structure_JobSeeker.xlsx  System_design.xlsx  install_sh  job_matcher.py  job_scraper.py  justfile  main.py  package-lock.json  package.json  requirements.txt  yaml
backend/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  uv_manage.sh
backend/ai_agent/: job_matcher.py
backend/examples/: uv_examples.sh
backend/scripts/: job_scraper.py  job_search.py
backend/utils/: logger.py
data/: sql.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  ChatWindow  types.ts
